# osteoblasts

./: Anim.cpp  Anim.h  Audio.cpp  Audio.h  BGManager.cpp  BGManager.h  CMakeLists.txt  Game.cpp  Game.h  GameRes.cpp  GameRes.h  Menu.cpp  Menu.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Ship.cpp  Ship.h  Spawner.cpp  Spawner.h  Terrain.cpp  Terrain.h  TerrainLoader.cpp  Utils.cpp  Utils.h  osteoblasts.cpp  ship_viewer.cpp  test.cpp  todo.txt  todo_old.txt
assets/: explosion.json  explosions.json  game.json  game2.json  ships.json
assets/enemies/shooter/old/: giraffe1.json  penguin1.json  starfish.json
assets/hero/: blast2.json  engine_fire.json  rocket_fire.json  shield.json  shinning.json
assets/hero/old/: hammer.json  shield.json
assets/luna/: luna.json  pieces.json
assets/menu/old/: mini_fire.json
assets/octopuss/: octopuss.json
assets/platypus/: belly_shot.json  engine_fire.json  pieces.json  platypus_appear.json  platypus_dissappear.json
assets/shader/: base.frag  base_texture.frag  blast.frag  blast_foo1.frag  blink.frag  boom.frag  damage.frag  laser.frag  test1.frag
assets/walrus/: walrus.json
ext/: CMakeLists.txt
ext/noise/: CMakeLists.txt
src/: CMakeLists.txt  Easing.h  Framework.cpp  Framework.h  Game.cpp  Game.h  Loader.cpp  Loader.h  Menu.cpp  Menu.h  MenuMain.cpp  MenuMain.h  Node.cpp  Node.h  Quad.h  SimpleList.h  SpaceBackground.cpp  SpaceBackground.h  Terrain.cpp  Terrain.h  TerrainLoader.h  Texture.h  Utils.h  bga.cpp
test/: CMakeLists.txt  test.cpp
tools/: pieces.sh  scr_name.sh
