add_library(
	noise
	latlon.cpp
	noisegen.cpp
	model/cylinder.cpp
	model/line.cpp
	model/plane.cpp
	model/sphere.cpp
	module/abs.cpp
	module/add.cpp
	module/billow.cpp
	module/blend.cpp
	module/cache.cpp
	module/checkerboard.cpp
	module/clamp.cpp
	module/const.cpp
	module/curve.cpp
	module/cylinders.cpp
	module/displace.cpp
	module/exponent.cpp
	module/invert.cpp
	module/max.cpp
	module/min.cpp
	module/modulebase.cpp
	module/multiply.cpp
	module/perlin.cpp
	module/power.cpp
	module/ridgedmulti.cpp
	module/rotatepoint.cpp
	module/scalebias.cpp
	module/scalepoint.cpp
	module/select.cpp
	module/spheres.cpp
	module/terrace.cpp
	module/translatepoint.cpp
	module/turbulence.cpp
	module/voronoi.cpp
	#win32/dllmain.cpp
)
